# coretact

./: .containerignore  .env.default  .gitignore  CLAUDE.md  Containerfile  DEPLOYMENT.md  README.md  main.py  pyproject.toml
.github/: DEPLOY_INFO.md
.github/workflows/: build.yml
assets/images/: logo-square.afdesign  logo.afdesign
coretact/: __init__.py  __main__.py  bot.py  log.py  models.py  storage.py  version.py
coretact/api/: __init__.py  __main__.py  app_keys.py  middleware.py  routes.py  server.py
coretact/api/static/: index.html
coretact/cogs/: __init__.py
coretact/cogs/coretact/: __init__.py
coretact/meshcore/: __init__.py  parser.py  utils.py
deploy/: deploy.sh
deploy/kube/: README.md  configmap.yaml.example  coretact-play.yaml
docs/: plan.md
tests/: __init__.py  conftest.py  test_advert_parser.py  test_api.py  test_storage.py
